Upload build for v1.1.0 and update appcast

--- a/Versions/DroidAssets-1.0.0.html
+++ b/Versions/DroidAssets-1.0.0.html
@@ -1,8 +1,6 @@
-<html>
-   <head>
-      <title>DroidAssets 1.0.0</title>
-   </head>
-   <body>
-      <p>First Release</p>
-   </body>
-<html>
+DroidAssets 1.0.0
+
+- First Release
+- Resize PNG assets
+- Regenerate 9-patches for reduced images
+- Place the generated images in the right drawable folder
