--- a/Versions/DroidAssets-1.1.0.html
+++ b/Versions/DroidAssets-1.1.0.html
@@ -1,8 +1,5 @@
-<html>
-   <head>
-      <title>DroidAssets 1.1.0</title>
-   </head>
-   <body>
-      <p>2 bugs fixed; 1 new feature</p>
-   </body>
-<html>
+DroidAssets 1.1.0
+
+- Fix 9-patch for images 1px wide that could be cut in some cases
+- Fix vertical 9-patch that was reversed
+- Fix 9-patch that could extend in the corners sometimes
